Edit signup and createPost handler for get image_url
